Fixes images that break the layout on mobile devices

--- a/client/scss/includes/_display.scss
+++ b/client/scss/includes/_display.scss
@@ -4,24 +4,25 @@
 div.centered,
 section.centered,
 main.centered {
-  display: flex !important;;
-  justify-content: center !important;;
-  align-items: center !important;;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
 }
 
 .pull-right {
-  align-items: flex-end !important;;
+  align-items: flex-end !important;
 }
 
 p.centered {
-  text-align: center !important;;
+  text-align: center !important;
 }
 
 /**
  * Apply this class in order to center images
  */
 img.centered {
-  display: block !important;;
-  margin-left: auto !important;;
-  margin-right: auto !important;;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  max-width: 100%;
 }
